# setuptools-reproducible

./: LICENSE  README.md  pyproject.toml  pytest.ini  setuptools_reproducible.py
.github/workflows/: main.yml
tests/: test_reproducibility.py
